Bug 295277 - Crash on exit in Akonadi::StandardMailActionManager::action
Summary: Crash on exit in Akonadi::StandardMailActionManager::action
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: Mail Filter Agent (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 278358 299916 307272 308592 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-03-03 22:16 UTC by auxsvr
Modified: 2012-10-18 10:05 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description auxsvr 2012-03-03 22:16:41 UTC
Kontact crashed as it was exiting. The backtrace:


Application: Kontact (kontact), signal: Segmentation fault
[Current thread is 1 (Thread 0xb26c7710 (LWP 17320))]

Thread 3 (Thread 0xb141ab70 (LWP 17321)):
#0  0xb3cad782 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0xb61603ac in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libc.so.6
#2  0xb5914189 in ?? () from /usr/lib/libQtWebKit.so.4
#3  0xb59141cf in ?? () from /usr/lib/libQtWebKit.so.4
#4  0xb3ca9a7d in start_thread () from /lib/libpthread.so.0
#5  0xb615289e in clone () from /lib/libc.so.6

Thread 2 (Thread 0xb0b1ab70 (LWP 17322)):
#0  0xb3cabadd in pthread_mutex_lock () from /lib/libpthread.so.0
#1  0xb61605c4 in pthread_mutex_lock () from /lib/libc.so.6
#2  0xb3bc1cd7 in g_main_context_release () from /usr/lib/libglib-2.0.so.0
#3  0xb3bc34d6 in ?? () from /usr/lib/libglib-2.0.so.0
#4  0xb3bc37fa in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#5  0xb648c5a7 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#6  0xb645840d in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#7  0xb64586a9 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#8  0xb6342d0c in QThread::exec() () from /usr/lib/libQtCore.so.4
#9  0xb6342dfb in QThread::run() () from /usr/lib/libQtCore.so.4
#10 0xb63461f0 in ?? () from /usr/lib/libQtCore.so.4
#11 0xb3ca9a7d in start_thread () from /lib/libpthread.so.0
#12 0xb615289e in clone () from /lib/libc.so.6

Thread 1 (Thread 0xb26c7710 (LWP 17320)):
[KCrash Handler]
#6  0xb016aa3e in Akonadi::StandardMailActionManager::action (this=0x855d948, type=Akonadi::StandardActionManager::ToggleWorkOffline) at /usr/src/debug/kdepimlibs-4.8.0/akonadi/kmime/standardmailactionmanager.cpp:739
#7  0xaf3d9ae8 in KMMainWidget::slotUpdateOnlineStatus (this=0x86ee318) at /usr/src/debug/kdepim-4.8.0/kmail/kmmainwidget.cpp:2591
#8  0xaf3e1ded in KMMainWidget::updateMessageActionsDelayed (this=0x86ee318) at /usr/src/debug/kdepim-4.8.0/kmail/kmmainwidget.cpp:3899
#9  0xaf3f8be9 in KMMainWidget::qt_static_metacall (_o=0x86ee318, _c=QMetaObject::InvokeMetaMethod, _id=17, _a=0xbf8daec0) at /usr/src/debug/kdepim-4.8.0/build/kmail/kmmainwidget.moc:342
#10 0xb64700ff in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#11 0xb64c39d5 in QTimer::timeout() () from /usr/lib/libQtCore.so.4
#12 0xb64790b6 in QTimer::timerEvent(QTimerEvent*) () from /usr/lib/libQtCore.so.4
#13 0xb64745d4 in QObject::event(QEvent*) () from /usr/lib/libQtCore.so.4
#14 0xb69df2f4 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#15 0xb69e4703 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#16 0xb7573851 in KApplication::notify (this=0xbf8dc2c4, receiver=0x87a5088, event=0xbf8db3d8) at /usr/src/debug/kdelibs-4.8.0/kdeui/kernel/kapplication.cpp:311
#17 0xb645989e in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#18 0xb648e63f in ?? () from /usr/lib/libQtCore.so.4
#19 0xb648bd28 in ?? () from /usr/lib/libQtCore.so.4
#20 0xb3bc2e2f in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#21 0xb3bc3560 in ?? () from /usr/lib/libglib-2.0.so.0
#22 0xb3bc37fa in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#23 0xb648c547 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#24 0xb6a9310a in ?? () from /usr/lib/libQtGui.so.4
#25 0xb645840d in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#26 0xb64586a9 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#27 0xb66d9cbb in KJob::exec (this=0x87a5280) at /usr/src/debug/kdelibs-4.8.0/kdecore/jobs/kjob.cpp:210
#28 0xaf3a91d4 in KMKernel::cleanup (this=0x845d9b8) at /usr/src/debug/kdepim-4.8.0/kmail/kmkernel.cpp:1251
#29 0xaf710e84 in KMailPart::~KMailPart (this=0x830fc48, __in_chrg=<optimized out>, __vtt_parm=<optimized out>) at /usr/src/debug/kdepim-4.8.0/kmail/kmail_part.cpp:137
#30 0xaf710fb2 in KMailPart::~KMailPart (this=0x830fc48, __in_chrg=<optimized out>, __vtt_parm=<optimized out>) at /usr/src/debug/kdepim-4.8.0/kmail/kmail_part.cpp:140
#31 0xb77d8708 in KontactInterface::Plugin::~Plugin (this=0x824ac60, __vtt_parm=0xb0219b04, __in_chrg=<optimized out>) at /usr/src/debug/kdepimlibs-4.8.0/kontactinterface/plugin.cpp:90
#32 0xb020ba85 in KMailPlugin::~KMailPlugin (this=0x824ac60, __in_chrg=<optimized out>, __vtt_parm=<optimized out>) at /usr/src/debug/kdepim-4.8.0/kontact/plugins/kmail/kmail_plugin.cpp:159
#33 0xb020bad2 in KMailPlugin::~KMailPlugin (this=0x824ac60, __in_chrg=<optimized out>, __vtt_parm=<optimized out>) at /usr/src/debug/kdepim-4.8.0/kontact/plugins/kmail/kmail_plugin.cpp:163
#34 0xb780ac67 in Kontact::MainWindow::~MainWindow (this=0x81b1d40, __in_chrg=<optimized out>, __vtt_parm=<optimized out>) at /usr/src/debug/kdepim-4.8.0/kontact/src/mainwindow.cpp:288
#35 0xb780ade2 in Kontact::MainWindow::~MainWindow (this=0x81b1d40, __in_chrg=<optimized out>, __vtt_parm=<optimized out>) at /usr/src/debug/kdepim-4.8.0/kontact/src/mainwindow.cpp:290
#36 0xb646d733 in qDeleteInEventHandler(QObject*) () from /usr/lib/libQtCore.so.4
#37 0xb64747b8 in QObject::event(QEvent*) () from /usr/lib/libQtCore.so.4
#38 0xb6a39442 in QWidget::event(QEvent*) () from /usr/lib/libQtGui.so.4
#39 0xb6e7333c in QMainWindow::event(QEvent*) () from /usr/lib/libQtGui.so.4
#40 0xb764ef24 in KMainWindow::event (this=0x81b1d40, ev=0x91df948) at /usr/src/debug/kdelibs-4.8.0/kdeui/widgets/kmainwindow.cpp:1084
#41 0xb7697e12 in KXmlGuiWindow::event (this=0x81b1d40, ev=0x91df948) at /usr/src/debug/kdelibs-4.8.0/kdeui/xmlgui/kxmlguiwindow.cpp:126
#42 0xb69df2f4 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#43 0xb69e47aa in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#44 0xb7573851 in KApplication::notify (this=0xbf8dc2c4, receiver=0x81b1d40, event=0x91df948) at /usr/src/debug/kdelibs-4.8.0/kdeui/kernel/kapplication.cpp:311
#45 0xb645989e in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#46 0xb645d518 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib/libQtCore.so.4
#47 0xb645d84c in QCoreApplication::sendPostedEvents(QObject*, int) () from /usr/lib/libQtCore.so.4
#48 0xb648c154 in ?? () from /usr/lib/libQtCore.so.4
#49 0xb3bc2e2f in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#50 0xb3bc3560 in ?? () from /usr/lib/libglib-2.0.so.0
#51 0xb3bc37fa in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#52 0xb648c547 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#53 0xb6a9310a in ?? () from /usr/lib/libQtGui.so.4
#54 0xb645840d in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#55 0xb64586a9 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#56 0xb645d8fa in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#57 0xb69dd164 in QApplication::exec() () from /usr/lib/libQtGui.so.4
#58 0x0804af91 in main (argc=151093272, argv=0x9017fd8) at /usr/src/debug/kdepim-4.8.0/kontact/src/main.cpp:218
Comment 1 Christophe Marin 2012-03-08 21:39:53 UTC
*** Bug 278358 has been marked as a duplicate of this bug. ***
Comment 2 Christophe Marin 2012-05-14 09:35:38 UTC
*** Bug 299916 has been marked as a duplicate of this bug. ***
Comment 3 Myriam Schweingruber 2012-10-03 10:15:47 UTC
*** Bug 307272 has been marked as a duplicate of this bug. ***
Comment 4 Laurent Montel 2012-10-03 11:14:07 UTC
Git commit 3f223ff810aad3379af392130a25a5067c0e203a by Montel Laurent.
Committed on 03/10/2012 at 13:13.
Pushed by mlaurent into branch 'KDE/4.9'.

Fix Bug 295277 - Crash on exit in Akonadi::StandardMailActionManager::action

FIXED-IN: 4.9.3

M  +13   -1    kmail/kmmainwidget.cpp

http://commits.kde.org/kdepim/3f223ff810aad3379af392130a25a5067c0e203a
Comment 5 Jekyll Wu 2012-10-18 10:05:17 UTC
*** Bug 308592 has been marked as a duplicate of this bug. ***