Fix Bug 295277 - Crash on exit in Akonadi::StandardMailActionManager::action

FIXED-IN: 4.9.3
BUG: 295277